--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -45,8 +45,8 @@
 		                                <button class="btn" id="documentoAutorizacao">
 											<i class="fa fa-download" style="color:black"></i>
 											<label style="color:black">
-												<a href="autorizaconcessao/autorizacao.pdf"
-												download=<?= $concessaotrajeto['doc_autorizacao'] ?>>Baixar</a>
+												<a href="data:text/html"
+												download=<?= $concessaotrajeto['doc_autorizacao'] ?>>Download</a>
 											</label>
 										</button>
 									</td>
