--- a/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
+++ b/application/views/scripts/categoriaPassageiro/listar-Passageiros.phtml
@@ -30,115 +30,8 @@
 											<i class="fas fa-edit" style="color:black"></i>
 										</button>
 									</td>
+								</tr>
 
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>									
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner Ereno Quincozes </td>
-									<td> 25/03/2019 </td>
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>								</tr>
-								<tr>
-									<td class="fundoTransparente">1</td>
-									<td> Vagner  Quincozes </td>
-									<td> 25/03/2019 </td>	
-									<td>
-										<button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
-											<i class="fas fa-edit" style="color:black"></i>
-										</button>
-									</td>
-								 </tr>
 							</table>
 	  
 </div>
@@ -153,82 +46,59 @@
 				 </button>
              </div>
              <div class="modal-body">
-				
 				<div class="container-fluid"> 
 					<div class="row">
-						<table class="" style="background-color: white;">
-								<tr>
-									<td><div style="text-align: right;">Nome completo:&nbsp;</div> </td>
-									<td><input type="text" class="form-control" id="nomeCompleto" value="Vagner Ereno Quincozes" style="width:400px;font-size: 15px"></input></td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">CPF:&nbsp;</div></td>
-									<td><input type="text" class="form-control" id="cpf" value="040.459.542-10" style="width:400px;font-size: 15px"></input></td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Data de Nascimento:&nbsp;</div></td>
-									<td><input type="date" class="form-control" id="dataDeNascimento" value="18/05/2017" style="width:400px;font-size: 15px"></input></td>
-								</tr>								
-								<tr>
-									<td><div style="text-align: right;">Comprovante de Matrícula:&nbsp;</div></td>
-									<td>
-										<input type="file" class="btn btn-default" id="compMatricula">
-										</input>
-									</td>
-									<td>
-									</td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Comprovante de Residência:&nbsp;</div></td>
-									<td>
-										<input type="file" class="btn btn-default" id="compResidencia">
-										</input>
-									</td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Rua:&nbsp;</div></td>
-									<td><input type="text" class="form-control" id="rua" value="Barão do Amazonas" style="width:400px;font-size: 15px"></input></td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Nº:&nbsp;</div></td>
-									<td><input type="text" class="form-control" id="numeroCasa" value="210" style="width:400px;font-size: 15px"></input></td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Bairro:&nbsp;</div></td>
-									<td><input type="text" class="form-control" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Celular:&nbsp;</div></td>
-									<td><input type="text" class="form-control" id="bairro" value="Centro" style="width:400px;font-size: 15px"></input></td>
-									
-								</tr>
-								<tr>
-									<td><div style="text-align: right;">Benefício Concedido:&nbsp;</div></td>
-									<td><div class="dropdown">
-											<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="beneficioConcedido">
-												Nenhum
-											</button>
-											<div class="dropdown-menu">
-												<a class="dropdown-item" href="#">Meia-Passagem</a>
-												<a class="dropdown-item" href="#">Isenção</a>
-											</div>
-										</div>
-									
-								</tr>
-						</table>
-					</div>
-				</div>
-				 
-				 		 
-				 
-				 
-				 
+						<div class="table-responsive">
+							<form method="post">
+							  <div class="form-group">
+							  	<div class="col-sm-6">
+									<label >Nome completo:</label>
+									<input type="text" class="form-control" name="nomeCompleto">
+									<label >Data de nascimento:</label>
+									<input type="date" class="form-control" name="dataNascimento">
+									<label >CPF:</label>
+									<input type="text" class="form-control" name="cpf">
+									<label >RG:</label>
+									<input type="text" class="form-control" name="rg">
+									<label> Celular: </label>
+									<input type="text" class="form-control" name="celular">
+								</div>
+								<div class="col-sm-6">
+									<label> Rua: </label>
+									<input type="text" class="form-control" name="rua">
+									<label> Nº: </label>
+									<input type="text" class="form-control" name="numeroCasa">									
+									<label> Bairro: </label>
+									<input type="text" class="form-control" name="bairro">									
+									<label >Comprovante de Matrícula:</label>
+									<br>
+									<button class="btn" id="comprovanteMatricula">
+										<i class="fa fa-download" style="color:black"></i>
+										<label style="color:black">
+											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
+											download="a">Download </a>
+										</label>
+									</button>
+									<br>
+									<label >Comprovante de Residência:</label>
+									<br>
+									<button class="btn" id="comprovanteMatricula">
+										<i class="fa fa-download" style="color:black"></i>
+										<label style="color:black">
+											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
+											download="a">Download </a>
+										</label>
+									</button>
+								</div>
+							  </div>
+							  <button type="submit" class="btn btn-success">Conceder</button>
+							  <button type="submit" class="btn btn-danger">Não Conceder</button>							
+							</form>							
+						</div>
+		 			</div>
+				</div>			 
              </div>
-             <div class="modal-footer">
-			    <button type="button" class="btn btn-success" data-dismiss="modal">Salvar</button>
 
-                 <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
-             </div>
          </div>
     </div>
  </div>
