adicionada as telas de estudante / idoso / deficiente e algumas modificações a mais.

--- a/application/views/scripts/categoriaPassageiro/index.phtml
+++ b/application/views/scripts/categoriaPassageiro/index.phtml
@@ -12,13 +12,13 @@
 					 <table class="table">
 						<tbody class="Active">
 						  <tr>
-							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="estudante"> Estudante</a></td>
+							<td><a href="<?= $this->baseUrl("categoriapassageiro/estudante")?>" class="btn btn-block btn-primary" id="estudante"> Estudante</a></td>
 						  </tr>
 						  <tr>
-							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="idoso"> Pessoa Idosa </a></td>
+							<td><a href="<?= $this->baseUrl("categoriapassageiro/idoso")?>" class="btn btn-block btn-primary" id="idoso"> Pessoa Idosa </a></td>
 						  </tr>
 						  <tr>
-							<td><a href=<?= $this->baseUrl("categoriapassageiro/listar-Passageiros")?> class="btn btn-block btn-primary" id="deficiencia"> Pessoa com Deficiencia </a></td>
+							<td><a href="<?= $this->baseUrl("categoriapassageiro/deficiente")?>" class="btn btn-block btn-primary" id="deficiencia"> Pessoa com Deficiencia </a></td>
 						  </tr>
 						</tbody>
 					</table>
