--- a/application/views/scripts/cobrador/editar.phtml
+++ b/application/views/scripts/cobrador/editar.phtml
@@ -35,14 +35,14 @@
 					
 					
 					<div class="col-8" >
-						<label for="nome-cobrador" id="label">Nome</label>
-						<input type="hidden" id="id-cobrador" name="id-cobrador">
-  			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
+						<label for="nome-cobrador" id="label" >Nome</label>
+						<input type="hidden" id="id-cobrador" name="id-cobrador" value="<?php echo $this->cobrador->getId_cobrador(); ?>">
+  			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo" value="<?php echo $this->cobrador->getNome(); ?>">
 
 					</div>
 					<div class="col-4" >
 						<label for="cpf" id="label">CPF</label>
-  			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF">
+  			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF" value="<?php echo $this->cobrador->getCpf(); ?>">
 
 					</div>
 					
