--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -114,7 +114,11 @@
       <td><?= $cobrador->getId_cobrador() ?>	</td>
       <td><?= $cobrador->getNome() ?>	</td>
       <td><?= $cobrador->getCpf() ?>	</td>
-      <td><a class="btn btn-info btn-labeled" >
+      <td><a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('cobrador/editar/id/' . $cobrador['id_cobrador']) ?>"
+
+
+
+       >
 			<span class="btn-label">
 				<i class="fas fa-eye"></i>
 			</span>
