--- a/application/views/scripts/onibus-urbano/index.phtml
+++ b/application/views/scripts/onibus-urbano/index.phtml
@@ -1,53 +1,50 @@
 <div class="container">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Ônibus Urbanos</li>
+    </ol>
     <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Ônibus Urbanos</li>
-            </ol>
-            <table class="table table-hover table-bordered dataTable" style="width: 100%;">
-                <thead>
+
+        <table class="table table-hover table-bordered dataTable" style="width: 100%;">
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Placa</th>
+                    <th>Chassi</th>
+                    <th>Nº Passageiros</th>
+                    <th>Nº Assentos</th>
+                    <th class="text-center">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
                     <tr>
-                        <th>Código</th>
-                        <th>Placa</th>
-                        <th>Chassi</th>
-                        <th>Nº Passageiros</th>
-                        <th>Nº Assentos</th>
-                        <th class="text-center">Ações</th>
+                        <td> <?= $onibus['id_onibus_urbano'] ?></td>
+                        <td> <?= $onibus['placa'] ?></td>
+                        <td> <?= $onibus['chassi'] ?></td>
+                        <td> <?= $onibus['numero_passageiros'] ?></td>
+                        <td> <?= $onibus['numero_assentos'] ?></td>
+                        <td class="text-center">
+                            <a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('/onibus-urbano/editar/id/'. $onibus['id_onibus_urbano']) ?>" >
+                                <span class="btn-label">
+                                    <i class="fas fa-eye"></i>
+                                </span>
+                                Visualizar Detalhes
+                            </a>
+                        </td>
                     </tr>
-                </thead>
-                <tbody>
-                    <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
-                        <tr>
-                            <td> <?= $onibus['id_onibus_urbano'] ?></td>
-                            <td> <?= $onibus['placa'] ?></td>
-                            <td> <?= $onibus['chassi'] ?></td>
-                            <td> <?= $onibus['numero_passageiros'] ?></td>
-                            <td> <?= $onibus['numero_assentos'] ?></td>
-                            <td class="text-center">
-                                <a class="btn btn-success btn-labeled" href="<?= $this->baseUrl('#') ?>" >
-                                    <span class="btn-label">
-                                        <i class="fas fa-eye"></i>
-                                    </span>
-                                    Visualizar Detalhes
-                                </a>
-                            </td>
-                        </tr>
-                    <? endforeach; ?>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th>Código</th>
-                        <th>Placa</th>
-                        <th>Chassi</th>
-                        <th>Nº Passageiros</th>
-                        <th>Nº Assentos</th>
-                        <th class="text-center">Ações</th>
-                    </tr>
-                </tfoot>
-            </table>
-        </div>
-        <div class="col-lg-2"></div>
+                <? endforeach; ?>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>Código</th>
+                    <th>Placa</th>
+                    <th>Chassi</th>
+                    <th>Nº Passageiros</th>
+                    <th>Nº Assentos</th>
+                    <th class="text-center">Ações</th>
+                </tr>
+            </tfoot>
+        </table>
     </div>
 </div>
