icones nas categorias de passageiros

--- a/application/layouts/scripts/layout_adminlocal.phtml
+++ b/application/layouts/scripts/layout_adminlocal.phtml
@@ -32,13 +32,13 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
-                                <i class="fas fa-bus-alt"></i>
-                                Ô<u>n</u>ibus Urbanos</a>
+                                <i class="fas fa-wallet"></i>
+                                C<u>a</u>rteira Passageiro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
-                                <i class="fas fa-bus"></i>
-                                Ôn<u>i</u>bus Intermunicipais</a>
+                                <i></i>
+                                <u></u></a>
                         </li>
                     </ul>
 
