--- a/application/views/scripts/categoriaPassageiro/estudante.phtml
+++ b/application/views/scripts/categoriaPassageiro/estudante.phtml
@@ -53,26 +53,26 @@
 							  <div class="form-group">
 							  	<div class="col-sm-6">
 									<label >Nome completo:</label>
-									<input type="text" class="form-control" name="nomeCompleto">
+									<input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto">
 									<label >Data de nascimento:</label>
-									<input type="date" class="form-control" name="dataNascimento">
+									<input type="date" class="form-control" name="dataNascimento" id="dataNascimento">
 									<label >CPF:</label>
-									<input type="text" class="form-control" name="cpf">
+									<input type="text" class="form-control" name="cpf" id="cpf">
 									<label >RG:</label>
-									<input type="text" class="form-control" name="rg">
+									<input type="text" class="form-control" name="rg" id="rg">
 									<label> Celular: </label>
-									<input type="text" class="form-control" name="celular">
+									<input type="text" class="form-control" name="celular" id="celular">
 								</div>
 								<div class="col-sm-6">
 									<label> Rua: </label>
-									<input type="text" class="form-control" name="rua">
+									<input type="text" class="form-control" name="rua" id="rua">
 									<label> Nº: </label>
-									<input type="text" class="form-control" name="numeroCasa">									
+									<input type="text" class="form-control" name="numeroCasa" id="numeroCasa">									
 									<label> Bairro: </label>
-									<input type="text" class="form-control" name="bairro">									
+									<input type="text" class="form-control" name="bairro" id="bairro">									
 									<label >Comprovante de Matrícula:</label>
 									<br>
-									<button class="btn" id="comprovanteMatricula">
+									<button class="btn" name="comprovanteMatricula" id="comprovanteMatricula">
 										<i class="fa fa-download" style="color:black"></i>
 										<label style="color:black">
 											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
@@ -82,7 +82,7 @@
 									<br>
 									<label >Comprovante de Residência:</label>
 									<br>
-									<button class="btn" id="comprovanteMatricula">
+									<button class="btn" name="comprovanteResidencia" id="comprovanteResidencia">
 										<i class="fa fa-download" style="color:black"></i>
 										<label style="color:black">
 											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
@@ -91,7 +91,7 @@
 									</button>
 								</div>
 							  </div>
-							  <button type="submit" class="btn btn-success">Conceder</button>
+							  <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
 							  <button type="submit" class="btn btn-danger">Não Conceder</button>							
 							</form>							
 						</div>
