--- a/application/views/scripts/concessaoTrajeto/index.phtml
+++ b/application/views/scripts/concessaoTrajeto/index.phtml
@@ -51,11 +51,10 @@
 										</button>
 									</td>
 		                            <td> 
-		                            	<!--<label class="switch">
-										 <input type="checkbox">
-										  <span class="slider round"></span>
-										</label>-->
+		                            	<input type="checkbox" checked data-toggle="toggle" id="ativo" name="ativo">
+		                            	<input type="checkbox" checked data-toggle="toggle" id="inativo" name="inativo">
 		                            	<?= $concessaotrajeto['status_concessao'] ?>
+
 	                            	</td>
 		                        </tr>
 		                    <? endforeach; ?>
