--- a/application/views/scripts/categoriaPassageiro/deficiente.phtml
+++ b/application/views/scripts/categoriaPassageiro/deficiente.phtml
@@ -53,28 +53,28 @@
 							  <div class="form-group">
 							  	<div class="col-sm-6">
 									<label >Nome completo:</label>
-									<input type="text" class="form-control" name="nomeCompleto">
+									<input type="text" disabled class="form-control" name="nomeCompleto" id="nomeCompleto">
 									<label >Data de nascimento:</label>
-									<input type="date" class="form-control" name="dataNascimento">
+									<input type="date" disabled class="form-control" name="dataNascimento" id="dataNascimento">
 									<label >CPF:</label>
-									<input type="text" class="form-control" name="cpf">
+									<input type="text" disabled class="form-control" name="cpf" id="cpf">
 									<label >RG:</label>
-									<input type="text" class="form-control" name="rg">
+									<input type="text" disabled class="form-control" name="rg" id="rg">
 									<label> Celular: </label>
-									<input type="text" class="form-control" name="celular">
+									<input type="text" disabled class="form-control" name="celular" id="celular">
 								</div>
 								<div class="col-sm-6">
 									<label> Rua: </label>
-									<input type="text" class="form-control" name="rua">
+									<input type="text" disabled class="form-control" name="rua" id="rua">
 									<label> Nº: </label>
-									<input type="text" class="form-control" name="numeroCasa">									
+									<input type="text" disabled class="form-control" name="numeroCasa" id="numeroCasa">									
 									<label> Bairro: </label>
-									<input type="text" class="form-control" name="bairro">		
+									<input type="text" disabled class="form-control" name="bairro" id="bairro">		
 									<label> Qual a deficiência?: </label>
-									<input type="text" class="form-control" name="tipoDeficiencia">								
+									<input type="text" disabled class="form-control" name="tipoDeficiencia" id="tipoDeficiencia">								
 									<label >Atestado Médico</label>
 									<br>
-									<button class="btn" id="atestadoMedico">
+									<button class="btn" name="atestadoMedico" id="atestadoMedico">
 										<i class="fa fa-download" style="color:black"></i>
 										<label style="color:black">
 											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
@@ -83,7 +83,7 @@
 									</button>
 								</div>
 							  </div>
-							  <button type="submit" class="btn btn-success">Conceder</button>
+							  <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
 							  <button type="submit" class="btn btn-danger">Não Conceder</button>							
 							</form>							
 						</div>
