CRUD cobrador e motorista funcionando ok.

--- a/application/views/scripts/cobrador/editar.phtml
+++ b/application/views/scripts/cobrador/editar.phtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="../ProjetoRPV/public/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/trajeto.css" rel="stylesheet">
+	
 	<title>Document</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -11,22 +11,15 @@
 
 
 </head>
-<body  style="background-image: url(dist/imagens/fundo.png);">
+<body style="background-image: url(../../../dist/imagens/fundo.png);" >
 
 	<h1 id="titulo">
-		Cobradores
+		Editar cobrador
 	</h1>
 
 	<div class="container" style="background-color: rgba(0,0,0,0.8); padding-bottom: 0px;">
 		
-		<div class="row-fluid" style="padding: 10px;">
-			
-			<button class="btn btn-outline-primary btn-lt" type="button" id="novo_cobrador" >
-				Novo Cobrador</button>
-			
-
-
-		</div>
+		
 		<form  method="post"  >
 			<div class="form-group" >
 				
