--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link href="../ProjetoRPV/public/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/cobrador.css") ?> />
-	<link href="css/cobrador.css" rel="stylesheet">
+	
 	<title>Document</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -61,12 +61,12 @@
 					
 					<div class="col-8" >
 						<label for="nome-cobrador" id="label">Nome</label>
-  			 			<input type="text" name="nome" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
+  			 			<input type="text" name="nome-cobrador" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
 
 					</div>
 					<div class="col-4" >
 						<label for="cpf" id="label">CPF</label>
-  			 			<input type="text" name="cpf" class="form-control" id="cpf" placeholder="Digite o CPF">
+  			 			<input type="text" name="cpf-cobrador" class="form-control" id="cpf-cobrador" placeholder="Digite o CPF">
 
 					</div>
 					
