--- a/application/views/scripts/motorista/editar.phtml
+++ b/application/views/scripts/motorista/editar.phtml
@@ -3,44 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="../ProjetoRPV/public/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/trajeto.css" rel="stylesheet">
-	<title>Document</title>
+	
+	<title>Editar Motorista</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 	
 
 
 </head>
-<body  style="background-image: url(dist/imagens/fundo.png);">
+<body style="background-image: url(../../../dist/imagens/fundo.png);" >
 
 	<h1 id="titulo">
-		Cobradores
+		Editar Motorista
 	</h1>
 
 	<div class="container" style="background-color: rgba(0,0,0,0.8); padding-bottom: 0px;">
 		
-		<div class="row-fluid" style="padding: 10px;">
-			
-			<button class="btn btn-outline-primary btn-lt" type="button" id="novo_cobrador" >
-				Novo Cobrador</button>
-			
-
-
-		</div>
+		
 		<form  method="post"  >
 			<div class="form-group" >
-				<h2 style="color:white">Cadastro de Cobradores</h2>
+				
+				<h2 style="color:white">Cadastro de Motoristas</h2>
 				<div class="row" >
 					
 					
 					<div class="col-8" >
-						<label for="nome-cobrador" id="label">Nome</label>
-  			 			<input type="text" name="nome" class="form-control" id="nome-cobrador" placeholder="Insira o nome completo">
+						<label for="nome-cobrador" id="label" >Nome</label>
+						<input type="hidden" id="id-motorista" name="id-motorista" value="<?php echo $this->motorista->getId_motorista(); ?>">
+  			 			<input type="text" name="nome-motorista" class="form-control" id="nome-motorista" placeholder="Insira o nome completo" value="<?php echo $this->motorista->getNome(); ?>">
 
 					</div>
 					<div class="col-4" >
 						<label for="cpf" id="label">CPF</label>
-  			 			<input type="text" name="cpf" class="form-control" id="cpf" placeholder="Digite o CPF">
+  			 			<input type="text" name="cpf-motorista" class="form-control" id="cpf-motorista" placeholder="Digite o CPF" value="<?php echo $this->motorista->getCpf(); ?>">
 
 					</div>
 					
