--- a/application/views/scripts/motorista/index.phtml
+++ b/application/views/scripts/motorista/index.phtml
@@ -12,7 +12,7 @@
 		 $(document).ready(function(){
           $("form").hide();
           $("div#aviso").hide();
-          $("button#novo_cobrador").click(function(){
+          $("button#novo_motorista").click(function(){
             $("form").toggle("slow");
             $("button#fechar_aviso").click(function(){
             $("div#aviso").hide("slow");
@@ -47,7 +47,7 @@
 		
 		<div class="row-fluid" style="padding: 10px;">
 			
-			<button class="btn btn-outline-primary btn-lt" type="button" id="novo_cobrador" >
+			<button class="btn btn-outline-primary btn-lt" type="button" id="novo_motorista" >
 				Novo Motorista</button>
 			
 
@@ -115,7 +115,11 @@
       <td><?= $motorista->getId_motorista() ?>	</td>
       <td><?= $motorista->getNome() ?>	</td>
       <td><?= $motorista->getCpf() ?>	</td>
-      <td><a class="btn btn-info btn-labeled" >
+      <td><a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('motorista/editar/id/' . $motorista['id_motorista']) ?>"
+
+
+
+       >
 			<span class="btn-label">
 				<i class="fas fa-eye"></i>
 			</span>
